Интегрирование загрузки картинок, обновление апи (#14)
* aws was integrated and added image upload url
* rewrited upload to aws logic
* started work on a new API and created procedure for tag insertion
* added sql for adding tag and user meta
* moved out common check to the one function
